--- a/Assignment4/src/main/resources/templates/bookDetailPage.html
+++ b/Assignment4/src/main/resources/templates/bookDetailPage.html
@@ -59,7 +59,7 @@ function getAllComment(){
 			$.each(result, function(i, comment){
 				var commentDiv = '<div class="panel panel-info">' + 
 					'<div class="panel-body">'+comment.message + '</div>' +
-					'<div class="panel-footer"> <i>Người đăng</i> ' + comment.userId + 
+					'<div class="panel-footer"> <i>Người đăng</i> ' + getEmailUserById(comment.userId) + 
 					'<p>' + comment.createdAt + '</p></div>' +
 					'</div>';
 				$('#commentDiv').append(commentDiv);
@@ -130,8 +130,7 @@ function addComment(){
 <div class="col-md-10" style="margin-top:20px">
 	<input type="button" id="buttonEditBook" value="Chỉnh sửa"  sec:authorize="hasAnyRole('USER','ADMIN')" 
 					data-toggle="modal" data-target="#editBookFormDiv" style="display:none"/>
-</div>		
-<div class="col-md-10" id="commentDiv" style="margin-top:20px"></div>	
+</div>	
 <div class="col-md-10 form-group" id="" sec:authorize="hasAnyRole('USER','ADMIN')">
 	<form role="form" name="commentForm" id="commentForm">
 		<div class="form-group">
@@ -140,7 +139,9 @@ function addComment(){
 		</div>	 
 		<button type="submit" class="btn btn-primary ">Đăng</button>
 	</form>
-</div>
+</div>	
+<div class="col-md-10" id="commentDiv" style="margin-top:20px"></div>	
+
 
 
 <!-- edit book form -->
