--- a/Assignment4/src/main/resources/templates/booksListPage.html
+++ b/Assignment4/src/main/resources/templates/booksListPage.html
@@ -17,6 +17,7 @@
                 <th>Thời gian cập nhật</th>
                 <th>Chi tiết</th>
                 <th>Tình trạng</th>
+                <th>Tình trạng</th>
                 <th>Xóa</th>
             </tr>
         </thead>
@@ -71,7 +72,7 @@ function displayBooks(){
 		url : window.location.origin+"/api/book/all?page="+currentPageIndex+"&size="+pageSize+"&sort="+sortBy,
 		success: function(result){
 				$('#tableList tbody').html("");
-				$.each(result.content, function(i, book){
+				$.each(result.data.content, function(i, book){
 					var bookRow = '<tr>' +
 					'<td>' + book.id + '</td>' +
 					'<td>' + book.title + '</td>' +
@@ -81,11 +82,12 @@ function displayBooks(){
 					'<td><a title="Chi tiết" href="javascript:void(0)" '+
 						'onclick="getBookDetail('+book.id+')"> Xem</a></td>' +
 					'<td>'+ doCheck(book.enabled,book.id) +'</td>' + 
+					'<td id="rowBook'+book.id+'">'+ doCheck1(book.enabled,book.id) +'</td>' + 
 					'<td><a title="Xóa" onclick="deleteBook('+ book.id+')">Xóa</a></td></tr>';
 					$('#tableList tbody').append(bookRow);
 		        });
-				currentPageIndex = result.pageable.pageNumber;
-				pageCount = result.totalPages;
+				currentPageIndex = result.data.pageable.pageNumber;
+				pageCount = result.data.totalPages;
 				PaginateSetPageObjects();
 		},
 		error : function(e) {
@@ -115,7 +117,17 @@ function doCheck(status,bookId){
     return select;
 }
 
+function doCheck1(status,bookId){
+	var div = '<div class="btn-group">';
+    if(status){
+    	div += '<a class="btn dropdown-toggle btn-success optEnabled" data-toggle="dropdown" href="#">Hiện<span class="caret"></span></a>';
+    }else{
+    	div += '<a class="btn dropdown-toggle btn-danger optDisabled" data-toggle="dropdown" href="#">Ẩn<span class="caret"></span></a>';
 
+    }
+    div += '<ul class="dropdown-menu"><li><a value="1" onclick="changeStatusBook(this.value,'+bookId+')">Hiện</a></li><li><a value="0" onclick="changeStatusBook(this.value,'+bookId+')">Ẩn</a></li></ul></div>';
+    return div;
+}
 
 $('#sortBy').on('change', function() {
 	sortBy = this.value;
@@ -131,5 +143,6 @@ function changeStatusBook(st, id){
         status : st
       },
 	});	
+	
 }
 </script>
