--- a/Assignment4/src/main/resources/templates/home.html
+++ b/Assignment4/src/main/resources/templates/home.html
@@ -51,6 +51,12 @@ $(document).ready( function () {
 	}
 });
 
+function searchBook(){
+	$.ajax({url:window.location.origin+'/searchBookResult',success:function(result){
+	      $("#Content").html(result);
+	    }});
+}
+
 
 </script>
 <body>
@@ -62,18 +68,14 @@ $(document).ready( function () {
 			<div class="navbar-header">
 				<a class="navbar-brand" href="">THƯ VIỆN SÁCH</a>
 			</div>
-				
-			<form class="navbar-form navbar-left" action=""  method="POST" >
+					
+			<form class="navbar-form navbar-left" name="searchForm" id="searchForm" onsubmit="return searchBook()">
 				<div class="form-group">
-					<input type="text" name="keyword" class="form-control" >
+					<input type="text" name="keyword" id="keyword" class="form-control" placeholder="Nhập từ khóa muốn tìm">
 				</div>
-				<button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-				Tìm kiếm theo : 
-					<select name="searchBy" style="color:black">
-						<option value="all_field">Tất cả</option>
-						<option value="title">Tiêu đề</option>
-						<option value="author">Tác giả</option>
-					</select>
+				<a class="btn btn-md btn-default" href="javascript:void(0)" onclick="searchBook()" >
+					<i class="glyphicon glyphicon-search"></i>
+		 		</a>	
 			</form>
      		<ul class="nav navbar-nav navbar-right">
 		      <li><label>Hi! <span sec:authentication="name"></span> </label></li>
