--- a/Assignment4/src/main/resources/templates/bookDetailPage.html
+++ b/Assignment4/src/main/resources/templates/bookDetailPage.html
@@ -34,6 +34,7 @@ function editBook(){
 			data : JSON.stringify(updateBook),
 			dataType : 'json',
 			success: function(result){
+				  $('#editBookFormDiv').modal('hide');
 				  $('.tableDetailBook').find('#title').html(result.title);
 				  $('.tableDetailBook').find('td#author').html(result.author);
 				  $('.tableDetailBook').find('td#created_at').html(result.createdAt);
@@ -57,10 +58,11 @@ function getAllComment(){
 		url : window.location.origin+"/api/comment/all/"+bookId,
 		success: function(result){
 			$.each(result, function(i, comment){
-				var commentDiv = '<div class="panel panel-info">' + 
+					var commentDiv = '<div class="panel panel-info">' + 
+					'<div class="panel-heading" style="margin: 3px 3px 3px"><b>' + getEmailUserById(comment.userId) + 
+					'</b><i style="padding-left: 10px;font-size: small;">' + comment.createdAt + '</i></div>' +
 					'<div class="panel-body">'+comment.message + '</div>' +
-					'<div class="panel-footer"> <i>Người đăng</i> ' + getEmailUserById(comment.userId) + 
-					'<p>' + comment.createdAt + '</p></div>' +
+					
 					'</div>';
 				$('#commentDiv').append(commentDiv);
 	        });
@@ -80,7 +82,6 @@ function addComment(){
 	var bookId = url.substring(url.lastIndexOf('/') + 1);
 	var newComment = {}
 	newComment["message"] = $('#commentForm').find('#comment').val();
-	alert(window.location.origin+"/api/comment/add/"+bookId);
 	 $.ajax({
 		type : "POST",
 		contentType : "application/json",
@@ -88,10 +89,11 @@ function addComment(){
 		data : JSON.stringify(newComment),
 		dataType : 'json',
 		success: function(result){
+			$('#commentForm').find('#comment').html("");
 			var commentDiv = '<div class="panel panel-info">' + 
+			'<div class="panel-heading" style="margin: 3px"><b>' + getEmailUserById(result.userId) + 
+			'</b><i style="padding-left: 10px;font-size: small;">' + result.createdAt + '</i></div>' +
 			'<div class="panel-body">'+result.message + '</div>' +
-			'<div class="panel-footer"> <i>Người đăng</i> ' + result.userId + 
-			'<p>' + result.createdAt + '</p></div>' +
 			'</div>';
 		$('#commentDiv').append(commentDiv);
 		 },
@@ -128,10 +130,11 @@ function addComment(){
 	<img class = "bookImage" width=280px >
 </div>
 <div class="col-md-10" style="margin-top:20px">
-	<input type="button" id="buttonEditBook" value="Chỉnh sửa"  sec:authorize="hasAnyRole('USER','ADMIN')" 
-					data-toggle="modal" data-target="#editBookFormDiv" style="display:none"/>
+	<input type="button" class="btn btn-primary" id="buttonEditBook" value="Chỉnh sửa"  
+		   sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')" 
+		   data-toggle="modal" data-target="#editBookFormDiv" style="display:none"/>
 </div>	
-<div class="col-md-10 form-group" id="" sec:authorize="hasAnyRole('USER','ADMIN')">
+<div class="col-md-10 form-group" id="" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">
 	<form role="form" name="commentForm" id="commentForm">
 		<div class="form-group">
 			<label> Bình luận </label>
@@ -145,7 +148,7 @@ function addComment(){
 
 
 <!-- edit book form -->
-<div id="editBookFormDiv" class="modal fade" role="dialog" sec:authorize="hasAnyRole('USER','ADMIN')">
+<div id="editBookFormDiv" class="modal fade" role="dialog" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header" style="padding:20px 40px;">
